--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
@@ -131,7 +131,7 @@
 
           <mat-form-field fxFlex="48%">
             <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelMobile" | translate }}</mat-label>
-            <input matInput type="number" formControlName="mobileNo" />
+            <input matInput type="text" formControlName="mobileNo" />
           </mat-form-field>
 
           <mat-form-field *ngIf="createClientForm.value.legalFormId === 1" fxFlex="48%">
