--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -34,9 +34,9 @@
     
     
     <!-- Content -->
-    <mifosx-content class="contentCss"></mifosx-content>
+    <midas-content class="contentCss"></midas-content>
     <!-- Footer -->
-    <mifosx-footer class="footerCss"></mifosx-footer>
+    <midas-footer class="footerCss"></midas-footer>
 
   </mat-sidenav-content>
 
