Revert "Change UI 06.04.2021"
This reverts commit 1eafafd2c52097e46d98917b46931bd67fca3c0b.

--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -34,9 +34,9 @@
     
     
     <!-- Content -->
-    <midas-content class="contentCss"></midas-content>
+    <mifosx-content class="contentCss"></mifosx-content>
     <!-- Footer -->
-    <midas-footer class="footerCss"></midas-footer>
+    <mifosx-footer class="footerCss"></mifosx-footer>
 
   </mat-sidenav-content>
 
