--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -67,7 +67,7 @@
     </mat-list>
     -->
     <!-- Footer -->
-    <midas-footer></midas-footer>
+    <mifosx-footer></mifosx-footer>
 
   </div>
 
