--- a/src/app/shared/user-account-info/user-account-info.component.html
+++ b/src/app/shared/user-account-info/user-account-info.component.html
@@ -1,5 +1,5 @@
 
-<div id="midas-user-account-info" tourAnchor="toolbar-5">
+<div id="midas-user-account-info">
 <button
   mat-raised-button
   class=" aligned-with-icons "
