--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -1,89 +1,38 @@
 <mat-toolbar fxLayout="row" color="primary" id="midas-toolbar">
-
-  <div class="app-brand m-r-20" [routerLink]="['/home']" *ngIf="!this.sidenav.opened" tourAnchor="toolbar-1">
+  
+  <div class="app-brand m-r-20" [routerLink]="['/home']" *ngIf="!this.sidenav.opened">
     <img src="../../../../assets/images/Midas-logo.png" alt="app-logo" class="app-logo" />
     <span class="app-logo-text text-muted">MIDAS</span>
-  </div>
+  </div> 
 
-  <div *ngIf="!this.isDesktop">
-    <button mat-mini-fab *ngIf="!sidenavCollapsed " (click)="toggleSidenav()" matTooltip="Bật menu">
-      <fa-icon icon="bars" size="lg"></fa-icon>
-    </button>
-  </div>
+  <button mat-mini-fab *ngIf="!sidenavCollapsed" (click)="toggleSidenav()" matTooltip="Bật menu">
+    <fa-icon icon="bars" size="lg"></fa-icon>
+  </button>
 
-  <div fxLayoutGap.gt-md="5%" fxLayoutGap.lt-md="3%" *ngIf="this.isDesktop">
-
-    <button mat-mini-fab [matMenuTriggerFor]="institutionMenu" #institutionMenuTrigger="matMenuTrigger" 
-    matTooltip="Thông tin khách hàng/ đại lý/ nhân viên"
-    tourAnchor="toolbar-2-1">
-      <i class="fas fa-info"></i>
-    </button>
-
-    <button mat-mini-fab [matMenuTriggerFor]="ListMenu" #ListMenuTrigger="matMenuTrigger"
-    matTooltip="Danh sách công nợ khách hàng/ tài khoản nhân viên"
-    tourAnchor="toolbar-2-2">
-      <i class="fas fa-list-ol"></i>
-    </button>
-
-    
-    <button mat-mini-fab [matMenuTriggerFor]="transactionMenu" #transactionMenuTrigger="matMenuTrigger"
-    matTooltip="Quản lý giao dịch và booking đại lý"
-    tourAnchor="toolbar-2-3">
-      <i class="fas fa-money-check-alt"></i>
-      <!-- <a matLine>Giao dịch</a> -->
-    </button>
-
-    <button mat-mini-fab [matMenuTriggerFor]="BookingMenu" #BookingMenuTrigger="matMenuTrigger"
-    matTooltip="Booking tiền quỹ"
-    tourAnchor="toolbar-2-4">
-      <i class="fas fa-book-medical"></i>
-      <!-- <a matLine>Booking</a> -->
-    </button>
-
-    <button mat-mini-fab [matMenuTriggerFor]="POSPartnerMenu" #POSPartnerMenuTrigger="matMenuTrigger"
-    matTooltip="Danh sách máy POS - hạn mức còn lại"
-    tourAnchor="toolbar-2-5">
-      <i class="fas fa-hands-helping"></i>
-      <!-- <a matLine>Máy POS và đối tác</a> -->
-    </button>
-
-    
-    <div *midasHasPermission="'POS_UPDATE'">
-      <button mat-mini-fab *midasHasActiveModule="'campaignModule'" [matMenuTriggerFor]="MarketingMenu"
-        #MarketingMenuTrigger="matMenuTrigger">
-
-        <i class="fas fa-ad"></i>
-        <!-- <a matLine>Marketing</a> -->
-
-      </button>
-    </div>
-  </div>
+  
 
   <!-- <button mat-mini-fab *ngIf="sidenav.opened" (click)="toggleSidenavCollapse()" matTooltip="Toggle Collapse"
     fxHide.lt-md="true">
     <fa-icon *ngIf="!sidenavCollapsed" icon="chevron-left"></fa-icon>
     <fa-icon *ngIf="sidenavCollapsed" icon="chevron-right"></fa-icon>
   </button> -->
-
-  <div fxFlex fxLayout="row" fxLayoutAlign="end around" fxLayoutAlign.lt-md="end center" *ngIf="this.isDesktop"
-    class="m-r-15">
+  <div fxFlex fxLayout="row" fxLayoutAlign="end around" fxLayoutAlign.lt-md="end center" *ngIf="this.isDesktop" class = "m-r-15">
     <!-- <span ></span> -->
+    
 
+    <midas-theme-picker fxHide.lt-md class = "m-r-15"></midas-theme-picker>
 
-    <midas-theme-picker fxHide.lt-md class="m-r-15" *ngIf="this.isCommercial"></midas-theme-picker>
-
-    <midas-notifications-tray fxHide.lt-md class="m-r-15" tourAnchor="toolbar-3"> </midas-notifications-tray>
+    <midas-notifications-tray fxHide.lt-md class = "m-r-15"> </midas-notifications-tray >
     <!-- <br /> -->
-    <button mat-mini-fab fxHide.lt-md mat-icon-button [matMenuTriggerFor]="applicationMenu" class="m-r-15"
-      matTooltip="Profile của {{ userFullname }}" tourAnchor="toolbar-4">
+    <button mat-mini-fab fxHide.lt-md mat-icon-button [matMenuTriggerFor]="applicationMenu" class = "m-r-15" matTooltip="{{ currentUser.username }}">
       <div fxLayout="column" fxLayoutAlign="center center" style="margin:0;padding:0"><i class="fas fa-user-cog"
           style="font-size:larger;margin:0;padding:0"></i>
         <!-- <span style="font-size:0.7rem;line-height:1rem">{{ currentUser.username }}</span> -->
       </div>
     </button>
-  </div>
+    </div>
 
-  <midas-user-account-info fxLayout="row" style="min-width: 10rem"></midas-user-account-info>
+    <midas-user-account-info fxLayout="row" style="min-width: 10rem"></midas-user-account-info>
 
 
 </mat-toolbar>
@@ -123,69 +72,8 @@
   </button>
 </mat-menu>
 
-<!-- Mobile: Floating Menu -->
 <midas-menu *ngIf="!isDesktop" style="
  position: fixed;
  bottom: 1%;
  right: 3%;">
 </midas-menu>
-<!-- End Mobile: Floatign menu -->
-
-<!-- Mat-menu của billpos -->
-<mat-menu #institutionMenu="matMenu" [overlapTrigger]="false">
-  <button mat-menu-item routerLink="/clients/staff">Nhân viên</button>
-  <button mat-menu-item routerLink="/clients/customer">{{ "Toolbar_Component.lblClient" | translate }}</button>
-  <button mat-menu-item routerLink="/groups">{{ "Toolbar_Component.lblGroup" | translate }}</button>  
-  <button mat-menu-item routerLink="/clients/interchange">Đối tác Interchange</button>  
-  <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'" routerLink="/centers">Centers</button>
-
-</mat-menu>
-
-<mat-menu #ListMenu="matMenu" [overlapTrigger]="false">
-  <button mat-menu-item routerLink="/accounts/balance-clients">
-    {{ "Quản lý công nợ khách lẻ" | translate }}
-  </button>
-  <button mat-menu-item (click)="daily()">
-    {{ "Quản lý công nợ đại lý" | translate }}
-  </button>
-  <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/accounts/balance-teller">
-    {{ "Quản lý số dư teller" | translate }}
-  </button>
-
-</mat-menu>
-
-<mat-menu #POSPartnerMenu="matMenu" [overlapTrigger]="false">
-  <!-- <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/terminals">
-          Điều chuyển máy POS
-        </button> -->
-  <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/limit">{{ "Quản lý hạn mức POS" |
-    translate }}</button>
-  <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals">
-    {{ "Quản lý máy POS" | translate }}
-  </button>
-  <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party">
-    {{ "Toolbar_Component.lblThirdParty" | translate }}
-  </button>
-  <!-- <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button> -->
-
-</mat-menu>
-
-<mat-menu #transactionMenu="matMenu" [overlapTrigger]="false">
-  <button mat-menu-item routerLink="/transaction">Quản lý giao dịch</button>
-  <button mat-menu-item routerLink="/transaction/rollTermSchedule">Quản lý đáo hạn thẻ</button>
-  <button mat-menu-item routerLink="/transaction/fee-paid-management">Quản lý phí giao dịch</button>
-  <button mat-menu-item routerLink="/booking/agency">Quản lý booking của Đại lý</button>
-</mat-menu>
-
-<mat-menu #BookingMenu="matMenu" [overlapTrigger]="false">
-  
-  <button mat-menu-item routerLink="/booking/create">Tạo booking nội bộ</button>
-  <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/booking/view">Quản lý booking nội
-    bộ</button>
-</mat-menu>
-
-<mat-menu #Marketing="matMenu" [overlapTrigger]="false">
-  <button mat-menu-item routerLink="/marketing/create">Tạo chiển dịch</button>
-  <button mat-menu-item routerLink="/marketing/booking">Booking</button>
-</mat-menu>
-<!-- end -->
