fix UI logic, update firebase service
- fix UI logic: Show admin, bill Management Button and bank info button
- Update firebase Client Service SDK to 8.3.2.
- Add firebase client token to localStorage.
- add sending firebase token to Notification server function.

--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -1,5 +1,5 @@
 <!-- Application Shell -->
-<mat-sidenav-container id="midas-shell-container" autosize class="bg-light-grey">
+<mat-sidenav-container id="midas-shell-container" autosize>
 
   <!-- Sidenav -->
   <mat-sidenav
