--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -11,11 +11,11 @@
     </button>
   </div>
 
-  <div  fxLayout="row" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem" *ngIf="this.isDesktop">
+  <div fxLayout="row" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem" *ngIf="this.isDesktop">
 
     <button mat-mini-fab [matMenuTriggerFor]="institutionMenu" #institutionMenuTrigger="matMenuTrigger"
       matTooltip="Thông tin khách hàng/ đại lý/ nhân viên" tourAnchor="toolbar-2-1">
-      <i class="fas fa-info"></i>
+      <i class="fas fa-users"></i>
     </button>
 
     <button mat-mini-fab [matMenuTriggerFor]="ListMenu" #ListMenuTrigger="matMenuTrigger"
@@ -52,9 +52,10 @@
 
       </button>
     </div>
-    <div fxLayout="row" *midasHasPermission="'ALL_FUNCTIONS'"  fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem">
-      
-      <button mat-mini-fab color="basic" *midasHasActiveModule="'billModule'" [routerLink]="['/bills']" matTooltip="Quản lý hóa đơn đầu vào">
+    <div fxLayout="row" *midasHasPermission="'ALL_FUNCTIONS'" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem">
+
+      <button mat-mini-fab color="basic" *midasHasActiveModule="'billModule'" [routerLink]="['/bills']"
+        matTooltip="Quản lý hóa đơn đầu vào">
         <i class="fas fa-receipt"></i>
       </button>
 
@@ -62,7 +63,8 @@
         <i class="fas fa-university"></i>
       </button>
 
-      <button mat-mini-fab color="basic" [matMenuTriggerFor]="accountingMenu" #accountingMenuTrigger="matMenuTrigger" matTooltip="Quản trị hệ thống">
+      <button mat-mini-fab color="basic" [matMenuTriggerFor]="accountingMenu" #accountingMenuTrigger="matMenuTrigger"
+        matTooltip="Quản trị hệ thống">
         <i class="fas fa-cogs"></i>
       </button>
     </div>
@@ -75,21 +77,21 @@
   </button> -->
 
   <div fxFlex fxLayout="row" fxLayoutAlign="end around" fxLayoutAlign.lt-md="end center" *ngIf="this.isDesktop"
-    class="m-r-15">
+  fxLayoutGap="0.5rem">
     <!-- <span ></span> -->
+    <div fxLayout="row"  fxLayoutAlign="end center" fxLayoutGap="0.5rem">
+     <span style="color:black">{{userFullname }}</span> 
+      <button mat-mini-fab fxHide.lt-md mat-icon-button [matMenuTriggerFor]="applicationMenu" class="m-r-15"
+        matTooltip="Profile của {{ userFullname }}" tourAnchor="toolbar-4">
+        <i class="fas fa-user-cog"></i>
+      </button>
 
-
+    </div>
     <midas-theme-picker fxHide.lt-md class="m-r-15" *ngIf="this.isCommercial"></midas-theme-picker>
 
     <midas-notifications-tray fxHide.lt-md class="m-r-15" tourAnchor="toolbar-3"> </midas-notifications-tray>
     <!-- <br /> -->
-    <button mat-mini-fab fxHide.lt-md mat-icon-button [matMenuTriggerFor]="applicationMenu" class="m-r-15"
-      matTooltip="Profile của {{ userFullname }}" tourAnchor="toolbar-4">
-      <div fxLayout="column" fxLayoutAlign="center center" style="margin:0;padding:0"><i class="fas fa-user-cog"
-          style="font-size:larger;margin:0;padding:0"></i>
-        <!-- <span style="font-size:0.7rem;line-height:1rem">{{ currentUser.username }}</span> -->
-      </div>
-    </button>
+
   </div>
 
   <midas-user-account-info fxLayout="row" style="min-width: 10rem"></midas-user-account-info>
