--- a/src/app/shared/user-account-info/user-account-info.component.scss
+++ b/src/app/shared/user-account-info/user-account-info.component.scss
@@ -9,8 +9,8 @@
     font-size: medium;
     border-radius: 25px;
     margin-right: 15px;
-    color: white;
-    background: #3b5998;
+    // color: white;
+    // background: #ff4081;
   }
   
 }
